# daivik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  bochsrc  build.sh  builder.sh  log  run.sh
.cache/clangd/index/: GlobalDescriptorTable.cxx.6A5DA9F372A6867E.idx  GlobalDescriptorTable.h.90A900A034250FDC.idx  GlobalDescriptorTable.hxx.CE2D0F5AE495F92A.idx  cursor.hxx.7A5EF50DD9FB068F.idx  font.cxx.3CBBFEB6A9EC694C.idx  font.hxx.E9A754A491021A5B.idx  font.hxx.F69A3284EADD7EB8.idx  fonts.cxx.C32A4D643DD5C5AE.idx  fonts.hxx.FA09D2C64C723422.idx  framebuffer.hxx.35A8798D3B1C59EB.idx  kernel.c.2131411EAAB6470E.idx  kernel.cxx.7C9850D4853D328F.idx  kernel.cxx.D7D3D351FF90CA0F.idx  print.hxx.50E2C38A3D52D2DF.idx  selected_font.hxx.11CA94700BF9CF69.idx  stivale2.h.06710FFB8D4FAC01.idx  stivale2.h.1A9EBD08AEE21256.idx  terminal.cxx.1889D301EBC9E774.idx  terminal.hxx.56E9845FFA00F06E.idx  terminal.hxx.6A6D866072C2783B.idx  translations.hxx.7435300D4B66BFD6.idx  wang_bios_8x16.hxx.8F947E7FCDFC5472.idx  write.cxx.5EE5226695C38412.idx  write.hxx.A685586ECE8A8B17.idx
kernel/: CMakeLists.txt  linker.ld
kernel/headers/kernel/: global_descriptor_table.hxx
kernel/headers/kernel/console/: cursor.hxx  display.hxx  font.hxx
kernel/headers/kernel/descriptors/: global_descriptor_table.hxx  intterrupt_descriptor_table.hxx
kernel/headers/kernel/fonts/: fonts.hxx  selected_font.hxx
kernel/headers/kernel/graphics/: framebuffer.hxx
kernel/headers/kernel/memory/: manager_impl.hxx
kernel/headers/kernel/terminal/: buffer.hxx  terminal.hxx  write.hxx
kernel/source/: kernel.cxx
kernel/sources/: GlobalDescriptorTable.cxx  global_descriptor_table.cxx  kernel.cxx
kernel/sources/console/: display.cxx  print.cxx  terminal.cxx
kernel/sources/descriptors/: global_descriptor_table.cxx  intterrupt_descriptor_table.cxx
kernel/sources/fonts/: fonts.cxx
kernel/sources/graphics/: font.cxx
kernel/sources/memory/: manager.cxx
kernel/sources/terminal/: terminal.cxx  write.cxx
libc/: CMakeLists.txt
libc/headers/: string.h
sysroot/boot/: daivik.elf  limine.cfg  limine.sys
sysroot/boot/EFI/BOOT/: BOOTX64.EFI
sysroot/program/headers/kernel/: GlobalDescriptorTable.h  GlobalDescriptorTable.hxx  global_descriptor_table.hxx  translations.hxx
sysroot/program/headers/kernel/console/: display.hxx  print.hxx  terminal.hxx
sysroot/program/headers/kernel/fonts/font-headers/: V7MERC_8x14.h
sysroot/program/headers/kernel/fonts/selected/: wang_bios_8x16.hxx
sysroot/program/headers/kernel/graphics/: font.hxx  framebuffer.hxx
sysroot/program/headers/kernel/memory/: manager.hxx
